#1.define project
#2.define make flags
#3.add sub dir

#define cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#1.define project and target
SET(PROJECT_NAME MassNet)
PROJECT(${PROJECT_NAME})
SET(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

#2.define make flags
SET(PROJECT_BUILD_TYPE "Debug")
SET(CMAKE_BUILD_TYPE ${PROJECT_BUILD_TYPE})
SET(CMAKE_CONFIGURATION_TYPES ${PROJECT_BUILD_TYPE})
IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
	SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} ${CMAKE_CXX_FLAGS} -std=c++11")
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall")
ENDIF()
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

#3.add sub dir
ADD_SUBDIRECTORY(core_mt)
ADD_SUBDIRECTORY(tinyxml)
ADD_SUBDIRECTORY(lfs)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(luaclient)
ADD_SUBDIRECTORY(test)

