#1.define project
#2.define make flags
#3.add sub dir

#define cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#1.define project and target
SET(PROJECT_NAME Cerberus)
PROJECT(${PROJECT_NAME})
SET(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
SET(LIB_NAME lcerberus)

#2.define make flags
SET(PROJECT_BUILD_TYPE "Debug")
#SET(PROJECT_BUILD_TYPE "Release")
SET(CMAKE_BUILD_TYPE ${PROJECT_BUILD_TYPE})
SET(CMAKE_CONFIGURATION_TYPES ${PROJECT_BUILD_TYPE})
IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
	SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} ${CMAKE_CXX_FLAGS} -std=c++11")
	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}" "/MP")
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")

#3.add sub dir
ADD_SUBDIRECTORY(3rd)
ADD_SUBDIRECTORY(luaclib-src)
ADD_SUBDIRECTORY(cerberus-src)
ADD_SUBDIRECTORY(test)

