
#1.define target
SET(TARGET_NAME lfs)

#2.include and lib
INCLUDE_DIRECTORIES(
./
/usr/local/include
)

LINK_DIRECTORIES(
/usr/lib
/usr/local/lib
)

IF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	INCLUDE_DIRECTORIES(${PROJECT_PATH}/include/windows/lua)
	# for windows dll
	LINK_DIRECTORIES(${PROJECT_PATH}/lib/windows)
ELSE()
ENDIF()

#3.group source
FILE(GLOB FILES_SOURCE *.h *.hpp *.c *.cpp)
SOURCE_GROUP("source" FILES ${FILES_SOURCE})

#4.create lib
ADD_LIBRARY(${TARGET_NAME} SHARED ${FILES_SOURCE})
IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
	TARGET_LINK_LIBRARIES(${TARGET_NAME} "lua")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	TARGET_LINK_LIBRARIES(${TARGET_NAME} "liblua")
ENDIF()

IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${PROJECT_PATH}/luaclib")
ELSEIF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_PATH}/luaclib")
	SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_PATH}/luaclib")
ENDIF()
